--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Children of clergy -- Fiction'
 - !lcsh 'Women intellectuals -- Fiction'
 - !lcsh 'Triangles (Interpersonal relations) -- Fiction'
+- GITenberg
 title: John Marchmont's Legacy, Volume 3 (of 3)
 url: http://www.gutenberg.org/ebooks/34541
